--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Frontend for Flask with modern chessboard.js",
   "scripts": {
-    "build": "echo 'No build needed for Flask + HTML setup.'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "vite": "^6.3.5"
