--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "chess.js": "^1.3.1",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "vite": "^6.3.5"
   }
 }
