--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^3.0.0"
 gunicorn = "^21.2.0"
 requests = "^2.32.3"
 flask-cors = "^6.0.0"
+flask-socketio = "^5.5.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
