--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
-flask
-flask-socketio
-eventlet
-gunicorn
-flask-cors
+bidict==0.23.1
+blinker==1.6.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.6
+django-online==0.2.1
+Flask==3.0.0
+flask-cors==6.0.0
+Flask-SocketIO==5.5.1
+gunicorn==21.2.0
+h11==0.16.0
+idna==3.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+packaging==23.2
+python-engineio==4.12.1
+python-socketio==5.13.0
+requests==2.32.3
+simple-websocket==1.1.0
+urllib3==2.4.0
+Werkzeug==3.0.0
+wsproto==1.2.0
