--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = "^21.2.0"
 requests = "^2.32.3"
 flask-cors = "^6.0.0"
 flask-socketio = "^5.5.1"
+eventlet = "^0.40.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
